spacing issue with footer image

--- a/index1.css
+++ b/index1.css
@@ -273,7 +273,7 @@ display: flex;}
     
 }
 
-.footer-contact a {display: flex;}
+.footer-contact a {display: inline-flex;}
 
 footer {
     display: block;
